# transport/httpserver/routes.go
@@ -10,7 +10,7 @@ func (s *Server) SetupRoutes() {
 	s.App.GET("/user", s.handler.GetUsersWithActiveBorrowedBooks)
 	s.App.GET("/user/count_books", s.handler.GetUsersWithBorrowedBookCountByDate)
 	s.App.POST("/book", s.handler.CreateBook)
-	s.App.GET("/book/:id/take", s.handler.TakeABook, s.handler.JWT().ValidateAuth)
-	s.App.GET("/book/:id/give", s.handler.GiveTheBook, s.handler.JWT().ValidateAuth)
-	s.App.GET("/book/:id/buy", s.handler.BuyABook, s.handler.JWT().ValidateAuth)
+	s.App.POST("/book/:id/borrow", s.handler.TakeABook, s.handler.JWT().ValidateAuth)
+	s.App.POST("/book/:id/return", s.handler.GiveTheBook, s.handler.JWT().ValidateAuth)
+	s.App.POST("/book/:id/buy", s.handler.BuyABook, s.handler.JWT().ValidateAuth)
 }
